autotests/syntax-tests-simple-refal/tests/negative/negative77.sref
Name { Name Name , $ENUM Name Name : { } : , : = : = ; = ; }
; 